Fixed horizontal scroll bar in webpage

--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ header
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100vw;
+  
 }
 
 #logo
